--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -53,7 +53,7 @@
 }
 
 .projects-footer {
-	background-color: #2F3640;
+	background-color: #252932;
 	padding: 6vh 0;
 }
 
@@ -77,7 +77,7 @@
 	-webkit-justify-content: center;
 	align-content: stretch;
 	align-items: center;
-	background-color: #2F3640;
+	background-color: #252932;
 	color: #FFFFFF;
 	display: -webkit-box;
 	display: -ms-flexbox;
