--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,12 +10,14 @@
 }
 
 .bim-contact {
+	position: relative;
 	-webkit-animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 	animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 	z-index: 2;
 }
 
 .bim-projects {
+	position: relative;
 	-webkit-animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 	animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 	z-index: 2;
