--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -25,22 +25,28 @@
 
 .projects {
 	-ms-flex-line-pack: center;
+	-webkit-align-content: center;
 	align-content: center;
 	-webkit-box-align: center;
 	-ms-flex-align: center;
+	-webkit-align-items: center;
 	align-items: center;
 	background-color: #353B48;
 	display: -webkit-box;
 	display: -ms-flexbox;
+	display: -webkit-flex;
 	display: flex;
 	-webkit-box-orient: vertical;
 	-webkit-box-direction: normal;
 	-ms-flex-direction: column;
+	-webkit-flex-direction: column;
 	flex-direction: column;
 	-ms-flex-wrap: wrap;
+	-webkit-flex-wrap: wrap;
 	flex-wrap: wrap;
 	-webkit-box-pack: center;
 	-ms-flex-pack: center;
+	-webkit-justify-content: center;
 	justify-content: center;
 	padding: 2vh 2%;
 }
@@ -83,7 +89,9 @@
 	color: #FFFFFF;
 	display: -webkit-box;
 	display: -ms-flexbox;
+	display: -webkit-flex;
 	display: flex;
+	-webkit-flex-direction: row;
 	flex-direction: row;
 	flex-wrap: nowrap;
 	justify-content: center;
@@ -128,6 +136,7 @@
 	-webkit-box-orient: vertical;
 	background-image: url(../img/background.jpg);
 	cursor: pointer;
+	-webkit-flex-direction: column;
 	flex-direction: column;
 	height: 100vh;
 }
@@ -503,6 +512,7 @@ hr {
 		-webkit-box-orient: horizontal;
 		-webkit-box-direction: normal;
 		-ms-flex-direction: row;
+		-webkit-flex-direction: row;
 		flex-direction: row;
 	}
 
